--- a/src/templates/component.mustache
+++ b/src/templates/component.mustache
@@ -1,12 +1,8 @@
 import * as React from 'react';
 import { View, Text } from 'react-native';
 
-const {{ componentName }} = () => {
-    render() {
-        return(
-            <View>
-                <Text>{{ componentName }}</Text>
-            </View>
-        );
-    }
-}
+const {{ componentName }} = () =>
+    (<View>
+        <Text>{{ componentName }}</Text>
+    </View>);
+
