--- a/src/templates/component.mustache
+++ b/src/templates/component.mustache
@@ -1,8 +1,15 @@
 import * as React from 'react';
-import { View, Text } from 'react-native';
+import { View, Text, StyleSheet } from 'react-native';
 
 const {{ componentName }} = () =>
-    (<View>
+    <View style={styles.container}>
         <Text>{{ componentName }}</Text>
-    </View>);
+    </View>;
 
+const styles = StyleSheet.create({
+    container: {
+        flex: 1
+    }
+})
+
+export default {{ componentName }};
