Added generic template generator

--- a/templates/component.mustache
+++ b/templates/component.mustache
@@ -1,9 +1,9 @@
 import * as React from 'react';
 import { View, Text, StyleSheet } from 'react-native';
 
-const {{ componentName }} = () =>
+const {{ fileName }} = () =>
     <View style={styles.container}>
-        <Text>{{ componentName }}</Text>
+        <Text>{{ fileName }}</Text>
     </View>;
 
 const styles = StyleSheet.create({
@@ -12,4 +12,4 @@ const styles = StyleSheet.create({
     }
 })
 
-export default {{ componentName }};
+export default {{ fileName }};
