--- a/templates/StatefulComponent.mustache
+++ b/templates/StatefulComponent.mustache
@@ -1,5 +1,5 @@
 import * as React from 'react';
-import { View, StyleSheet } from 'react-native';
+import { View, StyleSheet, Text } from 'react-native';
 import PropTypes from 'prop-types';
 
 interface Props {
@@ -10,7 +10,7 @@ interface State {
 
 }
 
-class {{ fileName }} extends React.Component<Props, State> {
+class {{ componentName }} extends React.Component<Props, State> {
 
     state = {
         
@@ -22,7 +22,7 @@ class {{ fileName }} extends React.Component<Props, State> {
 
     render() {
         return <View style={styles.container}>
-
+            <Text>{{ componentName }}</Text>
         </View>;
     }
 }
@@ -33,8 +33,4 @@ const styles = StyleSheet.create({
     },
 });
 
-{{ fileName }}.propTypes = {
-    
-};
-
-export default {{ fileName }};
+export default {{ componentName }};
