--- a/templates/StatelessComponent.mustache
+++ b/templates/StatelessComponent.mustache
@@ -2,14 +2,14 @@ import * as React from 'react';
 import { View, Text, StyleSheet } from 'react-native';
 import PropTypes from 'prop-types';
 
-const {{ fileName }} = () =>
-    <View style={styles.container}>
-        <Text>{{ fileName }}</Text>
-    </View>;
-
-{{ fileName }}.propTypes = {
+interface Props {
 
 }
+
+const {{ componentName }} = (props: Props) =>
+    <View style={styles.container}>
+        <Text>{{ componentName }}</Text>
+    </View>;
 
 const styles = StyleSheet.create({
     container: {
@@ -17,4 +17,4 @@ const styles = StyleSheet.create({
     }
 });
 
-export default {{ fileName }};
+export default {{ componentName }};
